# Api-scents

./: .replit  README.md  api_docs.html  database.py  main.py  models.py  pyproject.toml  requirements.txt  sql_app.db  styles.css  test.py  test_api.py
front_scents/: app.js  index.html  style.css
templates/: api_docs.html
